--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -11,9 +11,10 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="category">category</label>
+    <label for="category">Category</label>
     <select id="category" class="form-control">
       <option value=""></option>
+      <option *ngFor="let c of categories$ | async" [value]="c.$key">{{ c.name }}</option>
     </select>
   </div>
   <div class="form-group">
