--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,10 @@
     <tbody>
       <tr *ngFor="let item of cart.items">
         <td>{{ item.product.title }}</td>
-        <td>{{ item.quantity }}</td>
+        <td>
+          <product-quantity [product]="item.product" [shopping-cart]="cart"> 
+          </product-quantity>
+        </td>
         <td>{{ item.totalPrice | currency:'USD':true }}</td>
       </tr>
     </tbody>
