--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -13,9 +13,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let item of cart.items">
-        <td>{{ item.product.title }}</td>
+        <td>{{ item.title }}</td>
         <td>
-          <product-quantity [product]="item.product" [shopping-cart]="cart"> 
+          <product-quantity [product]="item" [shopping-cart]="cart"> 
           </product-quantity>
         </td>
         <td>{{ item.totalPrice | currency:'USD':true }}</td>
